# Pico-ILI9341

./: BUILD_GUIDE.md  CMakeLists.txt  GETTING_STARTED.md  IMAGE_CONVERTER.md  QUICK_REFERENCE.md  README.md  build_all.sh  clean_all.sh  clean_all_advanced.sh
00_bare_minimum_test/: CMakeLists.txt  bare_minimum_test.c
00_chip_id_test/: CMakeLists.txt  chip_id_test.c
00_dc_pin_test/: CMakeLists.txt  dc_pin_test.c
01_text_demo/: CMakeLists.txt  main.c
02_graphics_demo/: CMakeLists.txt  main.c
03_image_demo/: CMakeLists.txt  image_data.h  main.c
04_speedometer/: CMakeLists.txt  Readme.md  main.c  speedometer.c  speedometer.h
lib/: font.h  ili9341.c  ili9341.h
tools/: image_converter.py
